--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -35,8 +35,34 @@ body
     padding:0;
 }
 
+body.node-type-takepart-campaign.multipage-campaign {
+    background: #eff3f5 url(../images/2012-02-08/bg-page-cv.png) repeat-x 0 0;
+}
+
 #join-login-top a.user-menu-register {
     display: inline-block;
+    white-space:nowrap;
+}
+
+/*slim header navigation*/
+#slim-header ul.menu li {
+    float: none;
+    float: left;
+    font-family: 'NewsGothicBoldCondensed';
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: normal;
+    letter-spacing: 0.05em;
+    list-style-type: none;
+    text-align: center;
+    padding: 8px 0 0 0;
+} 
+
+#slim-header ul.menu li a {
+    background: none;
+    color: #000;
+    background: url(../images/dot.png) no-repeat 0 7px;
+    padding: 0 10px;
     white-space:nowrap;
 }
 
@@ -532,9 +558,16 @@ ul#top-follow li a {
 
 #slim-header #join-login-top
 {
-    width:160px;
     float:left;
     font-size:11px;
+}
+
+/*slim header width*/
+#slim-header #nav-wrap {
+    background: none;
+    float: left;
+    min-width: 572px;
+    margin-left: 50px;
 }
 
 /* ===PAGE FOOTER=== */
